# Perseus_model

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  error-dump.dbg
arches/: dev.yaml  extensions.yaml  simple.yaml  simple_backup.yaml
arches/config/: load4_ig_4issue_arch.json  perfect_1000.yaml  perfect_150.yaml  perfect_6issue_arch.json  perfect_ig_4issue_arch.json  perfect_ig_6issue_arch.json  perfect_max.yaml  perfect_test.yaml  simple_arch.json  simple_phy128_rob128_rs128_ld4.json
cmake/: DRAMSim3.cmake  include_only.cmake  mavis.cmake  pybind.cmake  sparta.cmake  spike.cmake  stf.cmake
config/: .gitignore  Demo.yaml
config/auto_sim/: arches  auto_sim.py  error-dump.dbg  mavis_isa_files  topo
config/cpp_file/: unitFactory.cpp  unitFactory.hpp
config/py_file/: genconfig.py  pyenv.sh  topology.json  unit_config.py  units.json
config/py_file/src/: arches  genconfig.py  mavis_isa_files  pyenv.sh
cosim/: Backend.v  alu.v  f2if2o.v  filelist.f  freelist.v  fu.v  haha.v  oldest2_ready.sv  params.vh  physical_regfile.v  rob.v  rrt.v  rs.sv  rs_alu.sv  rs_lsu.sv  select2_unused.sv
legacy/basicunit/: BaseDigital.hh  FlipFlop.hh  NullDigitalUnit.hh
legacy/src/: Processor.hh  Simulator.hh
legacy/src/basicunit/: Register.cc  Register.hh  RegisterInterface.hh  RegisterProxy.cc  TransferQueue.hh
legacy/src/common/: DynInst.hh  InstPkg.cc  InstPkg.hh
legacy/src/component/: CSR.cc  InstBuffer.cc  InstBuffer.hh  PipelineRegister.hh  Registerfile.cc
legacy/src/stage/: Decode.cc  Decode.hh  Execute.cc  Execute.hh  Fetch2.hh  LoadStore.cc  WriteBack.cc  WriteBack.hh
legacy/src/timing/: Tick.cc  Tick.hh
legacy/src/trace/: DebugFlags.cc  DebugFlags.hh  TraceObject.hh
legacy/uncore/cache/: BaseCache.hpp  TagEntry.hpp
legacy/uncore/memory/: AbstractMemory.hpp  BaseMemory.cpp  BaseMemory.hpp  DRAMsim3.hpp
spec/: Genshin_model_spec.md  Perseus_model_spec.md
src/: BaseStage.hh  BaseUnit.hh  Processor.hh  Simulator.cc  Tick.cc  main.cc  main.cpp  timingbase.hh
src/Common/: DynInst.hh
src/Core/Backend/: AbstractLsu.cpp  AbstractLsu.hpp  CentraIssueQueue.cpp  CentraIssueQueue.hpp  Dispatch.hpp  DispatchStage.cpp  DispatchStage.hpp  Freelist.cpp  IntegrateRob.cpp  IntegrateRob.hpp  PerfectAlu.cpp  PerfectAlu.hpp  PerfectBackend.cpp  PerfectBackend.hpp  PerfectLsu.cpp  PerfectLsu.hpp  PhyRegfile.cpp  PhyRegfile.hpp  PhyRegfileReadPort.cpp  PhyRegfileReadPort.hpp  PhyRegfileWritePort.cpp  PhyRegfileWritePort.hpp  PhysicalRegfile.hpp  RenamingStage.cpp  RenamingStage.hpp  RenamingTable.cpp  RenamingTable.hpp  ReservationStation.cpp  ReservationStation.hpp  Rob.cpp  Rob.hpp  Scoreboard.cpp  Scoreboard.hpp
src/Core/Frontend/: PerfectFrontend.cpp  PerfectFrontend.hpp
src/Core/FuncUnit/: AbstractLsu.cpp  AbstractLsu.hpp  PerfectAlu.cpp  PerfectAlu.hpp  PerfectLsu.cpp  PerfectLsu.hpp  WriteBackStage.cpp  WriteBackStage.hpp
src/basic/: FuncUnits.cpp  FuncUnits.hpp  GlobalParam.cpp  GlobalParam.hpp  GlobalParamUnit.cpp  GlobalParamUnit.hpp  Inst.cpp  Inst.hpp  InstGroup.cpp  InstGroup.hpp  Instruction.hh  Instruction.hpp  PortInterface.cpp  PortInterface.hpp  SelfAllocatorsUnit.cpp  SelfAllocatorsUnit.hpp
src/basicunit/: Register.cc  Register.hh  RegisterProxy.hh  Stage.cc  Stage.hh  TransferQueue.hh
src/common/: InstPkg.cc  InstPkg.hh
src/component/: CSR.hh  Momory.cc  Momory.hh  PipelineRegister.cc  Registerfile.cc  Registerfile.hh
src/component/Core/: IntegrateRob.cpp  IntegrateRob.hpp  LoopQueue.hh  PerfectAlu.cpp  PerfectAlu.hpp  PerfectBackend.cpp  PerfectBackend.hpp  PerfectFrontend.cpp  PerfectFrontend.hpp  PerfectLsu.cpp  PerfectLsu.hpp
src/component/PerfectMemory/: PerfectMemory.cc  PerfectMemory.hh
src/core/abstract_backend/: DispatchStage.cpp  DispatchStage.hpp  FlushManager.cpp  FlushManager.hpp  Freelist.cpp  Freelist.hpp  PhysicalRegfile.cpp  PhysicalRegfile.hpp  RenamingStage.cpp  RenamingStage.hpp  RenamingTable.hpp  ReservationStation.cpp  ReservationStation.hpp  Rob.cpp  Rob.hpp  Scoreboard.cpp  Scoreboard.hpp
src/core/func_unit/: PerfectAlu.cpp  PerfectAlu.hpp  PerfectFu.cpp  PerfectFu.hpp  PerfectLsu.cpp  PerfectLsu.hpp  WriteBackStage.cpp  WriteBackStage.hpp
src/core/perfect_frontend/: PerfectFrontend.cpp  PerfectFrontend.hpp
src/include/: BaseDigital.hh  Common.hh  DynInsn.hh  DynInst.hh  FlipFlop.hh  InstPkg.hh  Latch.hh  LoopQueue.hh  LoopQueue_copy.hh  Processor.hh  Tick.hh
src/include/basicunit/: BaseDigital.hh  Register.hh  Stage.hh  TransferQueue.hh
src/include/temp/: Register.hh  Stage.hh
src/instgen/: InstAllocation.hpp  InstArchInfo.cpp  MavisUnit.cpp  MavisUnit.hpp  MiscUtils.hpp
src/interface/backend/: IBusyTable.hh  IDispatchQueue.hh  IFreeList.hh  IPhysicalReg.hh  IRenamingTable.hh  IReservationStation.hh  IRob.hh
src/interface/frontend/: IInstQueue.hh
src/interface/functionunit/: IperfectAlu.hh  IperfectLsu.hh
src/legacy/: Processunit.hh
src/legacy/basicunit/: FlipFlop.hh  Latch.hh
src/oldresources/: LoopQueue.hpp
src/olympia/: CoreTypes.hpp  InstAllocation.hpp  InstArchInfo.hpp  InstGenerator.cpp  InstGenerator.hpp  MavisUnit.cpp  MavisUnit.hpp  OlympiaAllocators.hpp
src/resources/: IteratorTraits.hpp  LoopQueue.hpp
src/simulation/: ElfParser.cpp  ElfParser.hpp  ExtensionsCfg.cpp  ExtensionsCfg.hpp  PmuUnit.cpp  PmuUnit.hpp  ResourceMapFactory.hpp  Simulation.cpp  Simulation.hpp  variable.hpp
src/stage/: Decode.hh  Execute.hh  Fetch1.cc  Fetch1.hh  Fetch2.cc  Fetch2.hh  LoadStore.hh  WriteBack.hh
src/stage/fetch/: InstBufferFetchAdapter.cc  InstBufferFetchAdapter.hh  PerfectMemInstAdapter.cc
src/subsrc/: InstPkg.cc  Stage.cc  Tick.cc
src/trace/: Logging.cc  Logging.hh
src/uncore/: MemAccessInfo.hpp
src/uncore/cache/: BaseCache.cpp  BaseCache.hpp  L1dCache.cpp  L1dCache.hpp  L2Cache.cpp  L2Cache.hpp  Mshr.hpp
src/uncore/memory/: AbstractMemory.cpp  AbstractMemory.hpp  DRAMsim3.cpp  (+1 more)
src/unit/: CSR.cc  CSR.hh  Momory.cc  PipelineRegister.cc  PipelineRegister.hh  Registerfile.cc  Registerfile.hh
traces/: hello_trace.zstf
traces/elf_test/: GenerateAsm.py  Makefile
(+75 files in other folders)
